- Se actualiza a arquitectura limpia - Se incorporan MediatR - Se agregan clases de dominio - Se actualiza a IdentityServer - Se crea proyecto exclusivo del contexto de datos

--- a/FrutosElqui.Mvc/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/FrutosElqui.Mvc/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-﻿@using FrutosElqui.Mvc.Models.UsuarioApp
+﻿@using FrutosElqui.Core.Usuarios
 @inject SignInManager<AppUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
