--- a/FrutosElqui.Mvc/Views/Shared/_LoginPartial.cshtml
+++ b/FrutosElqui.Mvc/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using FrutosElqui.Mvc.Models.UsuarioApp
+@using FrutosElqui.Core.Usuarios
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
 
