--- a/FrutosElqui.Mvc/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/FrutosElqui.Mvc/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -7,6 +7,12 @@
 <link rel="stylesheet" type="text/css" href="~/dataTable/SearchPanes/css/searchPanes.dataTables.css" />
 <link rel="stylesheet" type="text/css" href="~/dataTable/Select/css/select.dataTables.css" />
 
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/be7410e815.js" crossorigin="anonymous"></script>
+
 <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
