- Interfaz de creacion de bancos - Se corrigen errores de controladores, - Se agrega controlador de registro de usuarios con identity - Se corrige UI layout - Se agregan logos y mejoras gráficas

--- a/FrutosElqui.Mvc/Views/Home/Index.cshtml
+++ b/FrutosElqui.Mvc/Views/Home/Index.cshtml
@@ -2,13 +2,20 @@
     ViewData["Title"] = "Home Page";
 }
 
-
 @section Scripts{
     <partial name="_ValidationScriptsPartial"/>
-    <script type="text/javascript"> 
-        function Test() {
-            var result = @Url.Action("ListaBanco","Bancos");
+    <script type="text/javascript">
+        function Cargar() {
+            $.ajax({
+                url: '@Url.Action("RegistrarInit","Usuarios")',
+                type: 'POST',
+                async: true,
+                success : function() {
+                    alert('correcto');
+                },error : function() {
+                    alert('error');
+                }
+            });
         }
     </script>
-    
 }
