--- a/FrutosElqui.Mvc/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/FrutosElqui.Mvc/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,33 +1,7 @@
-﻿<link rel="stylesheet" type="text/css" href="~/dataTable/DataTables/css/jquery.dataTables.css" />
-<link rel="stylesheet" type="text/css" href="~/dataTable/Buttons/css/buttons.dataTables.css" />
-<link rel="stylesheet" type="text/css" href="~/dataTable/DateTime/css/dataTables.dateTime.css" />
-<link rel="stylesheet" type="text/css" href="~/dataTable/FixedHeader/css/fixedHeader.dataTables.css" />
-<link rel="stylesheet" type="text/css" href="~/dataTable/Responsive/css/responsive.dataTables.css" />
-<link rel="stylesheet" type="text/css" href="~/dataTable/SearchBuilder/css/searchBuilder.dataTables.css" />
-<link rel="stylesheet" type="text/css" href="~/dataTable/SearchPanes/css/searchPanes.dataTables.css" />
-<link rel="stylesheet" type="text/css" href="~/dataTable/Select/css/select.dataTables.css" />
-
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+﻿<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/be7410e815.js" crossorigin="anonymous"></script>
 
-<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-
-<script type="text/javascript" src="~/dataTable/jQuery/jquery-3.6.0.js"></script>
-<script type="text/javascript" src="~/dataTable/JSZip/jszip.js"></script>
-<script type="text/javascript" src="~/dataTable/pdfmake/pdfmake.js"></script>
-<script type="text/javascript" src="~/dataTable/pdfmake/vfs_fonts.js"></script>
-<script type="text/javascript" src="~/dataTable/DataTables/js/jquery.dataTables.js"></script>
-<script type="text/javascript" src="~/dataTable/Buttons/js/dataTables.buttons.js"></script>
-<script type="text/javascript" src="~/dataTable/Buttons/js/buttons.colVis.js"></script>
-<script type="text/javascript" src="~/dataTable/Buttons/js/buttons.html5.js"></script>
-<script type="text/javascript" src="~/dataTable/Buttons/js/buttons.print.js"></script>
-<script type="text/javascript" src="~/dataTable/DateTime/js/dataTables.dateTime.js"></script>
-<script type="text/javascript" src="~/dataTable/FixedHeader/js/dataTables.fixedHeader.js"></script>
-<script type="text/javascript" src="~/dataTable/Responsive/js/dataTables.responsive.js"></script>
-<script type="text/javascript" src="~/dataTable/SearchBuilder/js/dataTables.searchBuilder.js"></script>
-<script type="text/javascript" src="~/dataTable/SearchPanes/js/dataTables.searchPanes.js"></script>
-<script type="text/javascript" src="~/dataTable/Select/js/dataTables.select.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.11.3/b-2.0.1/b-colvis-2.0.1/b-html5-2.0.1/b-print-2.0.1/date-1.1.1/fc-4.0.0/fh-3.2.0/r-2.2.9/sb-1.2.2/sp-1.4.0/datatables.min.css"/>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.11.3/b-2.0.1/b-colvis-2.0.1/b-html5-2.0.1/b-print-2.0.1/date-1.1.1/fc-4.0.0/fh-3.2.0/r-2.2.9/sb-1.2.2/sp-1.4.0/datatables.min.js"></script>
