- Se agrega interfaz de crear proveedores - Se agrega interfaz de lista de proveedores - Se agrega interfaz de creacion de productos - Se agrega interfaz de lista de productos - Se agregan controladores - Se agregan iconos a los botones

--- a/FrutosElqui.Mvc/Views/Proveedores/EditarProveedor.cshtml
+++ b/FrutosElqui.Mvc/Views/Proveedores/EditarProveedor.cshtml
@@ -1,6 +1,6 @@
 ﻿@using FrutosElqui.Core.Proveedores
 @{
-    var Proveedor = ViewData["Proveedor"] as Proveedor;
+    var Proveedor = (ViewData["Proveedor"] as Proveedor)?? new Proveedor();
 }
 <div class="container-fluid">
 
