--- a/FrutosElqui.Mvc/Views/Productos/Index.cshtml
+++ b/FrutosElqui.Mvc/Views/Productos/Index.cshtml
@@ -7,19 +7,50 @@
 @inject RoleManager<IdentityRole> _roleManager
 
 @{
-    var Producto = ViewData["Producto"] as Producto;
+    var productos = (ViewData["Productos"] as List<Producto>)?? new List<Producto>();
 }
 <br/> 
 <hr/>
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
-
+            @if (!productos.Any())
+            {
+                <div class="alert alert-warning text-center"><h4><i class="fas fa-info-circle"></i>&nbsp;No existen productos creados.</h4></div>
+            }
+            else
+            {
+                <table id="productos" class="table table-striped table-bordered" style="width:100%">
+                    <thead>
+                        <tr class="text-center">
+                            <th>Nombre</th>
+                            <th>Categoria</th>
+                            <th>Medida</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    @foreach (var producto in productos)
+                    {
+                        <tr class="text-center">
+                            <td>@producto.NombreProducto</td>
+                            <td>@producto.CategoriaProducto.NombreCategoria</td>
+                            <td>@producto.MedidaProducto.NombreMedida</td>
+                            <td>
+                                <a class="btn-sm btn-outline-info">Ver</a>
+                            </td>
+                        </tr>
+                    }
+                    </tbody>
+                </table>
+            }
         </div>
     </div>
     <div class="row">
-        <div class="col-12">
-
+        <div class="col-12 text-center">
+            <a class="btn btn-primary" asp-controller="Productos" asp-action="NuevoProducto">
+                <i class="far fa-plus-square"></i>&nbsp;Crear nuevo producto
+            </a>
         </div>
     </div>
 </div>
@@ -27,6 +58,19 @@
 @section Scripts{
     <partial name="_ValidationScriptsPartial"/>
     <script type="text/javascript">
-        
+        $(document).ready(function () {
+            $('#productos').DataTable({
+                responsive: true,
+                order: [[0, 'desc']],
+                lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "Todo"]],
+                stateSave: true,
+                dom: 'Bfrtip',
+                autoFill: true,
+                buttons: ['excel', 'pdf'],
+                language: {
+                    "url": "https://cdn.datatables.net/plug-ins/1.10.12/i18n/Spanish.json"
+                }
+            });
+        });
     </script>
 }
