--- a/FrutosElqui.Mvc/Views/Proveedores/Index.cshtml
+++ b/FrutosElqui.Mvc/Views/Proveedores/Index.cshtml
@@ -1,15 +1,70 @@
 ﻿@using FrutosElqui.Core.Proveedores
 @{
-    var Proveedores = ViewData["Proveedores"] as List<Proveedor>;
+    var proveedores = (ViewData["Proveedores"] as List<Proveedor>)?? new List<Proveedor>();
 }
+<br/>
+<h3><i class="fas fa-user-tie"></i>&nbsp;Proveedores</h3>
+<hr/>
 <div class="container-fluid">
-
+    <div class="row">
+        <div class="col-md-12">
+            @if (!proveedores.Any())
+            {
+                <div class="alert alert-warning text-center"><h4><i class="fas fa-info-circle"></i>&nbsp;No existen proveedores creados.</h4></div>
+            }
+            else
+            {
+                <table id="tablaProveedores" class="table table-striped table-bordered" style="width:100%">
+                    <thead class="text-center">
+                    <tr>
+                        <th>R.U.T</th>
+                        <th>Nombre</th>
+                        <th>Acciones</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    @foreach (var proveedor in proveedores)
+                    {
+                        <tr class="text-center">
+                            <td>@proveedor.RutProveedor</td>
+                            <td>@proveedor.NombreProveedor</td>
+                            <td>
+                                <a class="btn btn-info">Ver</a>
+                            </td>
+                        </tr>
+                    }
+                    </tbody>
+                </table>
+            }
+        </div>
+    </div>
+    <hr/>
+    <div class="row text-center">
+        <div class="col-sm-6 col-md-6 col-lg-12">
+            <a class="btn btn-primary" asp-controller="Proveedores" asp-action="NuevoProveedor">
+                <i class="far fa-plus-square"></i>&nbsp;Crear nuevo proveedor
+            </a>
+        </div>
+    </div>
 </div>
 
 @section Scripts
 {
     <partial name="_ValidationScriptsPartial"/>
     <script type="text/javascript">
-
+        $(document).ready(function () {
+            $('#tablaProveedores').DataTable({
+                responsive: true,
+                order: [[0, 'desc']],
+                lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "Todo"]],
+                stateSave: true,
+                dom: 'Bfrtip',
+                autoFill: true,
+                buttons: ['excel', 'pdf'],
+                language: {
+                    "url": "https://cdn.datatables.net/plug-ins/1.10.12/i18n/Spanish.json"
+                }
+            });
+        });
     </script>
 }
