--- a/FrutosElqui.Mvc/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/FrutosElqui.Mvc/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+﻿@*<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>*@
 <script src="https://kit.fontawesome.com/be7410e815.js" crossorigin="anonymous"></script>
 
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.11.3/b-2.0.1/b-colvis-2.0.1/b-html5-2.0.1/b-print-2.0.1/date-1.1.1/fc-4.0.0/fh-3.2.0/r-2.2.9/sb-1.2.2/sp-1.4.0/datatables.min.css"/>
