- Se agregan cabeceras de modulos

--- a/FrutosElqui.Mvc/Views/Home/Index.cshtml
+++ b/FrutosElqui.Mvc/Views/Home/Index.cshtml
@@ -1,6 +1,148 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-4 p-3">
+            <div class="card bg-light" style="width: 18rem;">
+                <br />
+                <div class="text-center">
+                    <h2>
+                        <i class="card-img-top fas fa-users fa-3x"></i>
+                    </h2>
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Usuarios</h5>
+                    <a asp-controller="Bancos" asp-action="Index" class="btn btn-primary">Ir a usuarios</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 p-3">
+            <div class="card bg-light" style="width: 18rem;">
+                <br />
+                <div class="text-center">
+                    <h2>
+                        <i class="card-img-top fas fa-boxes fa-3x"></i>
+                    </h2>
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Productos</h5>
+                    <a asp-controller="Productos" asp-action="Index" class="btn btn-primary">Ir a productos</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 p-3">
+            <div class="card bg-light" style="width: 18rem;">
+                <br />
+                <div class="text-center">
+                    <h2>
+                        <i class="card-img-top fas fa-user-tie fa-3x"></i>
+                    </h2>
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Proveedores</h5>
+                    <a asp-controller="Proveedores" asp-action="Index" class="btn btn-primary">Ir a proveedores</a>
+                </div>
+            </div>
+        </div><div class="col-sm-12 col-md-6 col-lg-4 p-3">
+            <div class="card bg-light" style="width: 18rem;">
+                <br />
+                <div class="text-center">
+                    <h2>
+                        <i class="card-img-top fas fa-clipboard-list fa-3x"></i>
+                    </h2>
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Miscelaneos</h5>
+                    <a asp-controller="Bancos" asp-action="Index" class="btn btn-primary">Ir a miscelaneos</a>
+                </div>
+            </div>
+        </div><div class="col-sm-12 col-md-6 col-lg-4 p-3">
+            <div class="card bg-light" style="width: 18rem;">
+                <br />
+                <div class="text-center">
+                    <h2>
+                        <i class="card-img-top fas fa-user-circle fa-3x"></i>
+                    </h2>
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Clientes</h5>
+                    <a asp-controller="Bancos" asp-action="Index" class="btn btn-primary">Ir a clientes</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 p-3">
+            <div class="card bg-light" style="width: 18rem;">
+                <br />
+                <div class="text-center">
+                    <h2>
+                        <i class="card-img-top fas fa-file-invoice fa-3x"></i>
+                    </h2>
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Cotizaciones</h5>
+                    <a asp-controller="Bancos" asp-action="Index" class="btn btn-primary">Ir a cotizaciones</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 p-3">
+            <div class="card bg-light" style="width: 18rem;">
+                <br />
+                <div class="text-center">
+                    <h2>
+                        <i class="card-img-top fas fa-money-check-alt fa-3x"></i>
+                    </h2>
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Cuentas</h5>
+                    <a asp-controller="Bancos" asp-action="Index" class="btn btn-primary">Ir a cuentas</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 p-3">
+            <div class="card bg-light" style="width: 18rem;">
+                <br />
+                <div class="text-center">
+                    <h2>
+                        <i class="card-img-top fas fa-file-invoice-dollar fa-3x"></i>
+                    </h2>
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Ventas</h5>
+                    <a asp-controller="Bancos" asp-action="Index" class="btn btn-primary">Ir a ventas</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 p-3">
+            <div class="card bg-light" style="width: 18rem;">
+                <br />
+                <div class="text-center">
+                    <h2>
+                        <i class="card-img-top fas fa-store fa-3x"></i>
+                    </h2>
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Sucursales</h5>
+                    <a asp-controller="Bancos" asp-action="Index" class="btn btn-primary">Ir a sucursales</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 p-3">
+            <div class="card bg-light" style="width: 18rem;">
+                <br />
+                <div class="text-center">
+                    <h2>
+                        <i class="card-img-top fas fa-percent fa-3x"></i>
+                    </h2>
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Ofertas</h5>
+                    <a asp-controller="Bancos" asp-action="Index" class="btn btn-primary">Ir a ofertas</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 @section Scripts{
     <partial name="_ValidationScriptsPartial"/>
