- Giros - Documentos tributarios

--- a/FrutosElqui.Mvc/Views/Home/Index.cshtml
+++ b/FrutosElqui.Mvc/Views/Home/Index.cshtml
@@ -4,9 +4,9 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4 p-3">
-            <div class="card bg-light" style="width: 18rem;">
+            <div class="card bg-light" style="width: 18rem; height: 18rem;">
                 <br />
-                <div class="text-center">
+                <div class="text-center" style="height: 10rem;">
                     <h2>
                         <i class="card-img-top fas fa-users fa-3x"></i>
                     </h2>
@@ -18,9 +18,9 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 p-3">
-            <div class="card bg-light" style="width: 18rem;">
+            <div class="card bg-light" style="width: 18rem; height: 18rem;">
                 <br />
-                <div class="text-center">
+                <div class="text-center" style="height: 10rem;">
                     <h2>
                         <i class="card-img-top fas fa-boxes fa-3x"></i>
                     </h2>
@@ -32,9 +32,9 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 p-3">
-            <div class="card bg-light" style="width: 18rem;">
+            <div class="card bg-light" style="width: 18rem; height: 18rem;">
                 <br />
-                <div class="text-center">
+                <div class="text-center" style="height: 10rem;">
                     <h2>
                         <i class="card-img-top fas fa-user-tie fa-3x"></i>
                     </h2>
@@ -44,21 +44,23 @@
                     <a asp-controller="Proveedores" asp-action="Index" class="btn btn-primary">Ir a proveedores</a>
                 </div>
             </div>
-        </div><div class="col-sm-12 col-md-6 col-lg-4 p-3">
-            <div class="card bg-light" style="width: 18rem;">
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 p-3">
+            <div class="card bg-light" style="width: 18rem; height: 18rem;">
                 <br />
-                <div class="text-center">
+                <div class="text-center" style="height: 10rem;">
                     <h2>
                         <i class="card-img-top fas fa-clipboard-list fa-3x"></i>
                     </h2>
                 </div>
                 <div class="card-body text-center">
                     <h5 class="card-title">Miscelaneos</h5>
-                    <a asp-controller="Bancos" asp-action="Index" class="btn btn-primary">Ir a miscelaneos</a>
+                    <a asp-controller="Miscelaneos" asp-action="Index" class="btn btn-primary">Ir a miscelaneos</a>
                 </div>
             </div>
-        </div><div class="col-sm-12 col-md-6 col-lg-4 p-3">
-            <div class="card bg-light" style="width: 18rem;">
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4 p-3">
+            <div class="card bg-light" style="width: 18rem; height: 18rem;">
                 <br />
                 <div class="text-center">
                     <h2>
